it's "Sailfish OS", not "Sailfish" or "SailfishOS" (see sailfishos.org)
Signed-off-by: Simonas Leleiva <simonas.leleiva@jollamobile.com>

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Sailfish Hardware Adaptation Development Kit
+Sailfish OS Hardware Adaptation Development Kit
 --------------------------------------------
 
 Build-dependencies in Mer SDK (mer-tools) :
